--- a/style.css
+++ b/style.css
@@ -1,94 +1,99 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Bitter", arial;
-    letter-spacing: 0.6px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Bitter", arial;
+  letter-spacing: 0.6px;
 }
 
 body {
-    padding: 40px;
-    background-color: #f7f7f7;
-    color: #080808;
+  padding: 40px;
+  background-color: #f7f7f7;
+  color: #080808;
 }
 
 section {
-    margin: 0 0 14px 0;
-    padding: 0 0 16px 0;
-    border-bottom: 1px solid #21212133;
+  margin: 0 0 14px 0;
+  padding: 0 0 16px 0;
+  border-bottom: 1px solid #21212133;
+}
+
+section.projects ul {
+  padding-inline-start: 20px;
+  margin-block: 10px;
 }
 
 section:last-of-type {
-    margin: 0;
-    padding: 0;
-    border-bottom: none;
+  margin: 0;
+  padding: 0;
+  border-bottom: none;
 }
 
 h1,
 h2 {
-    margin: 4px 0 8px 0;
-    font-size: 25px;
+  margin: 4px 0 8px 0;
+  font-size: 25px;
 }
 
 h1 {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 h4 {
-    margin: 8px 0 2px 0;
+  margin: 8px 0 2px 0;
 }
 
 p {
-    line-height: 22px;
-    font-size: 18px;
+  line-height: 22px;
+  font-size: 18px;
 }
 
 div {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 span {
-    width: 50%;
-    line-height: 20px;
-    font-size: 18px;
+  width: 50%;
+  line-height: 20px;
+  font-size: 18px;
 }
 
 .icons {
-    width: 26px;
+  width: 26px;
 }
 
 a {
-    color: #551A8B;
+  color: #551a8b;
 }
 
 .btn-container {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .btn-container button {
-    padding: 8px 24px;
-    font-size: 16px;
+  padding: 8px 24px;
+  font-size: 16px;
 }
 
 .m-0 {
-    margin: 0;
+  margin: 0;
 }
 
 .mb-8 {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .border-bottom-0 {
-    border-bottom: 0px;
+  border-bottom: 0px;
 }
 
 @media print {
-    .btn-container {
-        display: none;
-    }
+  .btn-container {
+    display: none;
+  }
 
-    body {
-        padding: 40px 40px 0 40px;
-    }
+  body {
+    padding: 40px 40px 0 40px;
+  }
 }
